# prompt-extraction-lab

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  config.bytype.yaml  config.gemma.yaml  config.minimax.yaml  config.qwen.yaml  config.small.yaml  config.yaml  pyproject.toml
.claude/agents/: adversarial-prompt-researcher.md  data-viz-analyst.md  python-harness-engineer.md  research-integrity-reviewer.md  scoring-metrics-engineer.md  technical-writer.md  test-engineer.md
blog/: outline.md
data/results/: results.combined.json  results.csv  results.json
data/results/run-gemma/: results.csv  results.json
data/results/run-minimax/: results.csv  results.json
data/results/run-qwen/: results.csv  results.json
dev-notes/: PLAN.md
dev-notes/prd/: README.md  phase-0-scaffolding.md  phase-1-target-app.md  phase-2-attacks.md  phase-3-scoring.md  phase-4-defenses.md  phase-5-orchestration.md  phase-6-figures.md  phase-7-writeup.md
src/: __init__.py
src/attacks/: __init__.py  queries.py  runner.py
src/experiment/: __init__.py  aggregate.py  combine.py  config.py  run.py
src/providers/: __init__.py  anthropic_provider.py  base.py  ollama_provider.py  openai_provider.py
src/scoring/: __init__.py  metrics.py  normalize.py  verifier.py
src/viz/: __init__.py  figures.py
tests/: test_aggregate.py  test_combine.py  test_config.py  test_defenses.py  test_figures.py  test_metrics.py  test_normalize.py  test_ollama_provider.py  test_prompts.py  test_provider_factory.py  test_queries.py  test_run_full.py  test_runner.py  test_verifier.py
(+3 files in other folders)
